...
  const startDate = new Date(trip.startDate);

  return (
    <>
      <Card style={styles.editCard}>
        <Input
          label="Trip name"
          value={nameInput}
          onChangeText={setNameInput}
          autoFocus
        />

        <View style={styles.emojiRow}>
...
